{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 56,
  "lineage": "874a0eda-e78b-f207-5ab7-8d7d3c9865f5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-088fd024fe7aa5070",
            "arn": "arn:aws:ec2:eu-north-1:455535734029:instance/i-0ff01381ae092556d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ff01381ae092556d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "cloud",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-07f7029812690190b"
              }
            ],
            "primary_network_interface_id": "eni-07f7029812690190b",
            "private_dns": "ip-172-31-44-117.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.44.117",
            "public_dns": "ec2-51-20-84-199.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.20.84.199",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d493a3b446691f96",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "devops-app-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-015d2e543fb509187",
            "tags": {
              "Name": "devops-app-ec2"
            },
            "tags_all": {
              "Name": "devops-app-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ffd4e98a9a680769"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "455535734029",
            "id": "i-0ff01381ae092556d",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.app_sg",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:455535734029:security-group/sg-0ffd4e98a9a680769",
            "description": "Security group for app server",
            "egress": [],
            "id": "sg-0ffd4e98a9a680769",
            "ingress": [],
            "name": "devops-app-sg",
            "name_prefix": "",
            "owner_id": "455535734029",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-078f60a1ad2a67088"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "455535734029",
            "id": "sg-0ffd4e98a9a680769",
            "region": "eu-north-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:455535734029:security-group-rule/sgr-0fbbdd727098435c8",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0fbbdd727098435c8",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-0ffd4e98a9a680769",
            "security_group_rule_id": "sgr-0fbbdd727098435c8",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "455535734029",
            "id": "sgr-0fbbdd727098435c8",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.app_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:455535734029:security-group-rule/sgr-07d53ec6481c4c94a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3000,
            "id": "sgr-07d53ec6481c4c94a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-0ffd4e98a9a680769",
            "security_group_rule_id": "sgr-07d53ec6481c4c94a",
            "tags": null,
            "tags_all": {},
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "455535734029",
            "id": "sgr-07d53ec6481c4c94a",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.app_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:455535734029:security-group-rule/sgr-024f297c0ef55ae9b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-024f297c0ef55ae9b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-0ffd4e98a9a680769",
            "security_group_rule_id": "sgr-024f297c0ef55ae9b",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "455535734029",
            "id": "sgr-024f297c0ef55ae9b",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.app_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:455535734029:security-group-rule/sgr-02dda041666feb587",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-02dda041666feb587",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-0ffd4e98a9a680769",
            "security_group_rule_id": "sgr-02dda041666feb587",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "455535734029",
            "id": "sgr-02dda041666feb587",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.app_sg"
          ]
        }
      ]
    }
  ]
}